# hpc-matrix-multiplication

./: .gitignore  CMakeLists.txt  README.md
src/: matmul.cpp  utils.cpp  utils.h
